--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3432,6 +3432,18 @@
                 android:resource="@string/weeb_settings_summary"/>
         </activity>
 
+        <!-- Global Actions -->
+        <activity android:name="Settings$PowermenuSettingsActivity"
+                  android:label="@string/global_actions_title"
+                  android:taskAffinity="com.android.settings" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.weeb.settings.fragments.PowermenuSettings" />
+        </activity>
+
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
